Improving KafkaConsumer